<resources>
    <string name="app_name">Paperless Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_a_quiz">Selecteer de quiz waaraan u wil deelnemen</string>
    <string name="loadingtitle">Even geduld</string>
    <string name="loadingmsg_list">Lijst van beschikbare quizzen ophalen</string>
    <string name="loadingerror">Er was een probleem bij het ophalen van de gegevens. Controleer je internet verbinding en probeer opnieuw.</string>
    <string name="btn_participant">Ik neem deel aan de quiz</string>
    <string name="btn_organizer">Ik organizeer de quiz</string>
    <string name="main_selectteamprompt">Kies je ploegnaam uit onderstaande lijst, geef je paswoord in en tik dan op LOG IN</string>
    <string name="main_selectorganizerprompt">Tik op je rol</string>
    <string name="main_wrongpswdentered">Geef de code in die je van de organizatie kreeg</string>
    <string name="main_registeratreceptionfirst">Gelieve eerst aan te melden bij de receptie</string>
    <string name="main_wrongpassword">Deze code klopt niet - Geef de code in die je van de organizatie kreeg</string>
    <string name="corrector_waitforroundopen">Deze ronde is nog niet geopend</string>
    <string name="corrector_waitforallanswers">Nog niet alle antwoorden voor deze ronde zijn ingegeven</string>
    <string name="corrector_roundalreadycorrected">Deze ronde werd al verbeterd</string>
    <string name="participant_waitforroundopen">Deze ronde is nog niet geopend</string>
    <string name="participant_waitforroundcorrection">We zijn deze ronde aan het verbeteren...</string>
    <string name="enter_passkey">Tik hier om je paswoord in te geven</string>
    <string name="loader_pleasewait">Even geduld...</string>
    <string name="loader_updatingquiz">Ophalen gegevens...</string>
    <string name="participant_nobackallowed">Sluit en herstart de app als je opnieuw will aanmelden</string>
    <string name="participant_aboutquiztitle">Over onze quiz</string>
    <string name="rnd_score_scoreforround">Score voor deze ronde:</string>
    <string name="rnd_score_rankafterround">Positie in deze ronde:</string>
    <string name="rnd_score_totalscore">Totale score na deze ronde:</string>
    <string name="rnd_score_totalrank">Positie in de totaalstand:</string>
    <string name="participant_submitanswers">Klaar!</string>
    <string name="participant_youranswers">Jullie antwoorden:</string>
    <string name="parthome_your_answer">Tik hier om je antwoord in te geven</string>
    <string name="order_title">Nieuwe bestelling</string>
    <string name="order_btn_new">Nieuwe bestelling</string>
    <string name="order_btn_submit">Bestelling plaatsen!</string>
    <string name="barresp_activeorders">Alle openstaande orders</string>
    <string name="orderhome_no_orders_yet">Geen bestellingen gevonden</string>
    <string name="orderhome_overview_orders">Overzicht bestellingen</string>
    <string name="order_modifytitle">Wijzig bestelling</string>
    <string name="neworder_sendorder">Bestelling doorsturen?</string>
    <string name="neworder_sendthisorder">Onderstaande bestelling doorgeven?</string>
    <string name="neworder_modifyorder">Bestelling wijzigen?</string>
    <string name="neworder_order">Bestelling</string>
    <string name="neworder_for">voor</string>
    <string name="neworder_modifyto">wijzigen in onderstaande?</string>
    <string name="edit_order">Wijzig bestelling</string>
    <string name="select_order">Selecteer een bestelling</string>
    <string name="barhelp_select_cats">Selecteer de bestellingen die je zal klaarzetten</string>
    <string name="barhelp_select_role">Wat ga je doen?</string>
    <string name="barhelp_orderdetail">Klaar te zetten bestelling</string>
    <string name="barhelp_no_orders">Geen bestellingen</string>
    <string name="barhelp_last_update">Updates:</string>
    <string name="barhelp_toastclosefirst">Sluit eerst de geselecteerde order</string>
    <string name="order_nothing_to_order">Niets te bestellen...</string>
    <string name="barhelp_orderdeliver">Af te leveren bestelling</string>
    <string name="order_confirmorcancel">Bevestig of annuleer je order!</string>
    <string name="part_answerssubmitted">Genoteerd. Je kan je antwoorden nog wijzigen tot de quizmaster de ronde afsluit</string>
    <string name="display_topics_remarks">Opmerkingen</string>
    <string name="display_topics_myremarks">Mijn opmerkingen</string>
    <string name="display_topics_no_remarks">Er zijn geen opmerkingen om weer te geven</string>
    <string name="display_topics_no_remarks_entered">Je hebt nog geen opmerkingen ingegeven. Als je opmerkingen ingeeft bij een vraag (kan pas als deze verbeterd werd) of bestelling komen deze in deze lijst, samen met het antwoord van de organisatie</string>
    <string name="display_topics_help">Help</string>
    <string name="display_topics_no_contexthelp">Er is geen context help beschikbaar</string>
    <string name="quizloader_answernotregistered">Opgelet: dit antwoord werd niet geregistreerd: </string>
    <string name="juror_roundbeingcorrected">Deze ronde wordt momenteel verbeterd</string>
    <string name="loader_updateroundstatus">Aanpassen ronde status</string>
    <string name="loader_errorroundstatusnotupdated">OPGELET: ronde status niet correct aangepast voor ronde</string>
    <string name="loader_updateteamstatus">Aanpassen team status</string>
    <string name="loader_errorteamstatusnotupdated">OPGELET: status niet correct aangepast voor team - ververs je scherm om de juiste status te zien</string>
    <string name="loader_errorcorrectionsnotsubmitted">Opgelet: je verbeteringen werden niet correct geregistreerd. Refresh je scherm en controleer opnieuw!</string>
    <string name="loader_remarknotsubmitted">Opgelet: deze opmerking werd niet correct geregistreerd - probeer het opnieuw: </string>
    <string name="loader_responsenotsubmitted">Opgelet: dit antwoord werd niet correct geregistreerd - probeer het opnieuw: </string>
    <string name="loader_itemunitsnotupdated">Opgelet: het aantal units werd niet correct ge-update voor dit item - probeer het opnieuw: </string>
</resources>
