<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".C_BarHelperHome">

    <LinearLayout
        android:id="@+id/llFilterRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIntroFilterRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/barhelp_select_role"
            android:textColor="@color/wrongRed"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgRole"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFilterCats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIntroFilterCats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/barhelp_select_cats"
            android:textColor="@color/wrongRed"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgCats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIntroDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/barhelp_orderdetail"
            android:textColor="@color/wrongRed"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_huge"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_huge"
            app:cardBackgroundColor="@color/colorPrimaryLight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivStatusToProcess"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cancel" />

                <ImageView
                    android:id="@+id/ivStatusWorkingOnIt"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/order_inprogress"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/ivStatusProcessed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/done" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <fragment
            android:id="@+id/fragment"
            android:name="com.paperlessquiz.frag_orderdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/frag_orderdetails" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOrderList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIntroOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/select_order"
            android:textColor="@color/wrongRed"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvShowAllOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_small"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>