<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.paperlessquiz.FragShowRoundScore">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvScoreForThisRound"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="right"
                    android:text="@string/rnd_score_scoreforround" />

                <TextView
                    android:id="@+id/tvYourScoreForThisRnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="00" />

                <TextView
                    android:id="@+id/tvMaxRndScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="/ 00" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRankForThisRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="right"
                    android:text="@string/rnd_score_rankafterround" />

                <TextView
                    android:id="@+id/tvYourRankForThisRnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="00" />
                <TextView
                    android:id="@+id/tvNrOfTeams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="/ 00" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvScoreTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="right"
                    android:text="@string/rnd_score_totalscore" />

                <TextView
                    android:id="@+id/tvYourScoreTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="00" />

                <TextView
                    android:id="@+id/tvMaxTotalScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="/ 00" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRankTotal"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:gravity="right"
                    android:text="@string/rnd_score_totalrank" />

                <ImageView
                    android:id="@+id/ivTopScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:visibility="gone"
                    app:srcCompat="@drawable/topscore" />

                <TextView
                    android:id="@+id/tvYourRankTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="00"
                    android:layout_marginLeft="@dimen/margin_medium" />
                <TextView
                    android:id="@+id/tvNrOfTeams2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="/ 00" />
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
